--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+@import '../node_modules/bootstrap/dist/css/bootstrap.min.css';
+@import '../node_modules/font-awesome/css/font-awesome.css';
+
+html, body {
+    height: 100%;
+    background: url('./assets/fonds/fond5.jpg') no-repeat center fixed;
+    background-size: cover;
+}
