--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col">   
             <nav class="row navbar navbar-expand-lg navbar-light color">
-                <a class="col-1" routerLink="/accueil"><img src="../../assets/logo/logo3.png"></a>
+                <a class="col-1" routerLink="/accueil"><img src="assets/logo/logo3.png"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
