--- a/src/app/detail-produit/detail-produit.component.html
+++ b/src/app/detail-produit/detail-produit.component.html
@@ -3,7 +3,7 @@
         <div class="card mb-3" style="max-width: 640px;" *ngFor="let p of product">
             <div class="row no-gutters">
               <div class="col-md-4">
-                <img src="../../{{p.image}}" class="card-img" alt="...">
+                <img src="{{p.image}}" class="card-img" alt="...">
               </div>
               <div class="col-md-8">
                 <div class="card-body">
